@@ -1,3 +1,11 @@
+Wed Oct 21 17:34:45 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * java/idl2jni/codegen/idl2jni_visitor.h:
+        * java/idl2jni/codegen/idl2jni_visitor.cpp:
+
+          Remoted temporary forward decls in ast_visitor impl; obviated
+          by TAO 1.7.4 release.
+
 Tue Oct 20 01:36:51 UTC 2009  Scott Harris  <harris_s@ociweb.com>
 
         * performance-tests/DCPS/TCPProfilingTest/raw_tcp/publisher/TestDriver.h
@@ -8,7 +16,7 @@ Fri Oct 16 18:35:38 UTC 2009  Yan Dai  <dai_y@ociweb.com>
 
         * tests/DCPS/FooTest4/Reader.cpp:
 
-          Fixed access violation on zero length SampleInfoSeq 
+          Fixed access violation on zero length SampleInfoSeq
           returned from read_next_instance or take_next_instance.
 
 Tue Oct 13 22:45:56 UTC 2009  Scott Harris  <harris_s@ociweb.com>
